--- a/1.html
+++ b/1.html
@@ -20,7 +20,7 @@
 		height:30%;
 		margin-top:6%;
 		margin-bottom:5%;
-		background:url(img/big_bounty.png) no-repeat;
+		background:url(img/meme.png) no-repeat;
 		background-position:center;
 		background-size: auto 100%;	
 	}
@@ -63,15 +63,14 @@
 	<body>
     <div class="container" id="">    
         <div class="icon" id="">
-            
-        </div>    
+        </div>
         <div class="name" id="nameO">
-            Big Bounty
-        </div>		
+            Memes
+        </div>
 		<div class="text" id="">
-			Unlock ALL packages for a mini-price!<br>
-            You'll get ALL the future expansions too!
+			Do you know your memes?<br>
+            Here is the final test.
 		</div>
-    </div>    
+    </div>
 	</body>
 </html>
